[gd_scene load_steps=7 format=3 uid="uid://b1p6m70mmhb1p"]

[ext_resource type="Script" uid="uid://c0yfs4sqx5x" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://drtd4ixts7cao" path="res://scenes/snake_segment.tscn" id="2_jyhfs"]
[ext_resource type="Texture2D" uid="uid://b4mgibvhgb244" path="res://art/bg.png" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://m351vtlpxxb0" path="res://scenes/hud.tscn" id="4_tefeu"]
[ext_resource type="Texture2D" uid="uid://cf68cw0dit158" path="res://art/apple.png" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://d0vhywhn78eic" path="res://scenes/game_over_menu.tscn" id="6_tefeu"]

[node name="Main" type="Node"]
script = ExtResource("1_o5qli")
snake_scene = ExtResource("2_jyhfs")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_tbgi4")
offset = Vector2(500, 550)

[node name="Hud" parent="." instance=ExtResource("4_tefeu")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Food" type="Sprite2D" parent="."]
texture = ExtResource("5_tbgi4")
offset = Vector2(25, 25)

[node name="GameOverMenu" parent="." instance=ExtResource("6_tefeu")]
process_mode = 2

[connection signal="timeout" from="MoveTimer" to="." method="_on_timer_timeout"]
[connection signal="restart" from="GameOverMenu" to="." method="_on_game_over_menu_restart"]
